tests/NormalTests/paczka1/small_fuzzy/24495987.err
Error in line 1: A457 A776 1,3
Error in line 4: KKbnMJPBoGd A--6 55,-
Error in line 2: A457 S466 12,2
Error in line 5: A457 A457 41,6
Error in line 6: A457 S466 86,5
Error in line 12: A457 S141 80,8
